# heditor

./: .gitignore  .gitmodules  CMakeLists.txt  build  editor  heditor.ini  watch
cmake/: linux.cmake
dmux/: heditor.json  tests.json
heditor/: CMakeLists.txt  app.c  command.c  command.h  detect_debugger.c  entry.h  libs.c  main.c  path.c  path.h  qoi.c  resources.h  utils.h
heditor/allocator/: arena.c  arena.h  counting.c  counting.h  sokol.h  std.h
heditor/assets/: README.md  planning.qoi
heditor/include/heditor/: plugin.h
heditor/src/: app.c  app.h  cnode-editor.cpp  cnode-editor.h  command.c  command.h  config.c  detect_debugger.h  editor.c  entry.h  hstring.c  hstring.h  hthread.c  hthread.h  icon.c  io.c  io.h  main.c  node_type_menu.c  node_type_menu.h  path.c  path.h  pico_log.h  pipeline_runner.c  pipeline_runner.h  plugin_api_impl.c  plugin_api_impl.h  resources.rc
heditor/src/allocator/: allocator.h  arena.c  arena.h  counting.h
heditor/src/sfd/: sfd.c
hgraph/: CMakeLists.txt
hgraph-core/: CMakeLists.txt
hgraph-core/include/hgraph/: core.h
hgraph-core/src/: reg.c  reg.h  types.c
hgraph-core/src/nodes/: convert.c  in.c  out.c
hgraph/include/hgraph/: common.h  io.h  plugin.h  runtime.h
hgraph/src/: graph.c  graph.h  hash.h  internal.h  io.c  mem_layout.h  migration.c  pipeline.c  ptr_table.c  ptr_table.h  registry.c  registry.h  slip.c  slip.h  slot_map.c  slot_map.h
tests/: CMakeLists.txt  common.c  common.h  data.c  data.h  graph.c  io.c  main.c  migration.c  pipeline.c  plugin1.c  plugin1.h  plugin2.c  plugin2.h  registry.c  rktest.h
